--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>IS645 HW5</title>
 </head>
 <body>
-    <h1>Stephanie Wells</h1>
+    <h1>IS645 HW5 Stephanie Wells</h1>
     Click on the excercise to see the solution:<br>
     <a href="html/ex1.html">Question 1</a> <br>
     <a href="html/ex2.html">Question 2</a> <br>
