--- a/html/ex3.html
+++ b/html/ex3.html
@@ -9,6 +9,7 @@
     <h1><a href="../index.html">Link to Start Page</a></h1>
     <h2>Q3 Solution</h2>
     <h3>View console to see JavaScript Output</h3>
+    <h4>For this one you need to expand object</h4>
     
     <script src="../js/ex3.js"></script>
 </body>
